--- a/style.css
+++ b/style.css
@@ -624,3 +624,18 @@ footer .right p{
     -webkit-mask-size: 100% 100%;
     mask-size: 100% 100%;
   }
+
+
+  .form1{
+    display: flex;
+    background-color: rgb(238, 238, 247);
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.form1 form{
+    width:800px;
+    
+}
