--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 a{
     text-decoration: none;
     color: #000;
@@ -126,7 +130,7 @@ h2.separator{
     padding: 0 80px;
     margin: 50px 0 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 30px;
 }
 
@@ -628,7 +632,7 @@ footer .right p{
 
   .form1{
     display: flex;
-    background-color: rgb(238, 238, 247);
+    background-color: rgb(221, 222, 229);
     width: 100vw;
     height: 100vh;
     justify-content: center;
